--- a/Contact.Rmd
+++ b/Contact.Rmd
@@ -9,7 +9,7 @@
   gtag('config', 'UA-129198675-1');
 </script>
 
-<!-- Hotjar Tracking Code for https://naomiclark.github.io/planning-for-calm/ -->
+<!-- Hotjar Tracking Code for https://planning-for-calm.github.io/planning-for-calm/ -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -20,17 +20,51 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+<style>
+  
+  body {
+  color: #7c8081;
+      font-family: Helvetica;
+  		letter-spacing: 0.025em;
+  		line-height: 1.75em;
+  }
+  
+  h2 {
+  font-weight: 200;
+  }
+  
+  h5 {
+  opacity: 0.5;
+  }
+  
+  p {
+  font-size: 15pt;
+  opacity: 0.8;
+  font-weight: 150;
+  }
+  
+  .uppercase {
+  text-transform: uppercase;
+  }
+  
+  .bottom-menu{
+  font-size: 12pt;
+  }
+  .author{
+  float: right;
+  display: inline-block;
+  }
+  
+  </style>
+
 </head>
-
-
----
-title: "Contact"
----
-
-<br>
+<body>
 
 <img src="pfc_images/contact.jpg" style="width: 100%">
-
+<br>
+<h2 class="uppercase">Contact</h2>
+<h6 class="lastMod">Last Modified: 24th Feb 2019</h6><h6 class="author">By Naomi Clark</h6>
+<br>
 <br>
 
 If you have any questions or want to chat about mindfulness, please feel free to contact us at:
@@ -38,8 +72,14 @@ If you have any questions or want to chat about mindfulness, please feel free to
 hello@planningforcalm.co.uk
 
 
-
-
+<br>
+<br>
 <br>
 
-All images sourced from [Unsplash](https://unsplash.com/).
+<p style="font-size: 10px">All images sourced from [Unsplash](https://unsplash.com/).</p>
+
+<br>
+<br>
+<center><p class="bottom-menu"><a href="Destress.html">De-Stress</a> | <a href="Reconnect.html">Reconnect</a> | <a href="Moments.html">Mindful Moments</a> | <a href="Research.html">Research</a> | <a href="Mindful_101.html">Mindful 101</a> | <a href="Misconceptions.html">Misconceptions</a> | <a href="On_Campus.html">On Campus</a> | <a href="PfC_blog.html">Blog</a></p></center>
+
+</body>
