--- a/index.Rmd
+++ b/index.Rmd
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129198675-1"></script>
@@ -9,7 +11,7 @@
   gtag('config', 'UA-129198675-1');
 </script>
 
-<!-- Hotjar Tracking Code for https://naomiclark.github.io/planning-for-calm/ -->
+<!-- Hotjar Tracking Code for https://planning-for-calm.github.io/planning-for-calm/ -->
 <script>
     (function(h,o,t,j,a,r){
         h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
@@ -20,24 +22,176 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+
+<title>Home</title>
+
+<style>
+
+body {
+color: #7c8081;
+    font-family: Helvetica;
+		letter-spacing: 0.025em;
+		line-height: 1.75em;
+}
+
+h2 {
+font-weight: 200;
+}
+
+h5 {
+opacity: 0.5;
+}
+
+p {
+font-size: 15pt;
+opacity: 0.8;
+font-weight: 150;
+}
+
+.uppercase {
+text-transform: uppercase;
+}
+
+/* Container needed to position the button. Adjust the width as needed. Note that 'container' is already secretly used in the code for the navbar so I've had to make a specific class of container for the button */
+.buttoncontainer {
+  position: relative;
+  width: 50%;
+}
+
+/* Make the image responsive */
+.buttoncontainer img {
+  width: 100%;
+  height: auto;
+  padding: 10px;
+
+}
+
+/* Style the button and place it in the middle of the container/image */
+.buttoncontainer .btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.buttoncontainer .btn:hover {
+  background-color: black;
+}
+
+
+.floatleft {
+float: left;
+}
+
+.floatright {
+float: right;
+}
+
+
+.indexbuttons::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.little_title {
+color: grey;
+font-style: italic;
+}
+
+  .quote-author{
+  font-size: 12pt;
+  }
+  
+</style>
+
 </head>
 
-
----
-title: "Planning for Calm"
----
-
-<center> ~site under development~ </center>
-
-
-<img src="pfc_images/index_intro.jpg" style="width: 100%">
+<body>
+<img src="pfc_images/PfC_index_banner.jpg" style="width: 100%">
 
 <br>
 
-####*We invite students to pause during their day, take a few breaths and be mindful in the present moment...*
+<center><h5>*We invite you to pause during your day, take a few breaths and be mindful in the present moment...* </h5></center>
 
 <br>
+<br>
 
-Planning for Calm is a project set up by the School of Computing Science at the University of Glasgow and aims to provide resources for students to learn about mindfulness, its potential benefits and how it can be integrated into the hectic student lifestyle. We also hope to provide resources for lecturers and staff who are interested in incorporating mindfulness into their courses and other aspects of work.
+<h2 class="uppercase"> Welcome to Planning for Calm</h2>
+<br>
+
+<p>Planning for Calm is a project set up by the School of Computing Science at the University of Glasgow to support the use of mindfulness skills on campus. Here you'll find resources for whatever your motivation, including de-stressing, being kinder to yourself and learning about the history and science behind mindfulness.</p>
+<br>
+<br>
+<center><p><em>"Live the actual moment. Only this actual moment is life."</em></center>
+<center></p style="font-size:12pt">Thich Nhat Hahn</center>
 
 <br>
+<br>
+<br>
+
+<center><p>We hope you find these resources both useful and enjoyable!</p></center>
+<br>
+<br>
+<center><p style="font-size: 12pt">Please note that these pages are regularly updated so continue to check-in and see what's new.</p></center>
+
+<br>
+<br>
+<br>
+<div class="indexbuttons">
+<div class="buttoncontainer floatleft">
+  <img src="pfc_images/index/destress_pic.jpg">
+  <button onclick="location.href='Destress.html'" class="btn">De-Stress</button>
+</div>
+<div class="buttoncontainer floatright">
+  <img src="pfc_images/index/reconnect_pic.jpg">
+  <button onclick="location.href='Reconnect.html'" class="btn">Reconnect</button>
+</div>
+
+<div class="buttoncontainer floatleft">
+  <img src="pfc_images/index/mmoments_pic.jpg">
+  <button onclick="location.href='Moments.html'"class="btn">Mindful Moments</button>
+</div>
+
+<div class="buttoncontainer floatright">
+  <img src="pfc_images/index/m101_pic.jpg">
+  <button onclick="location.href='Mindful_101.html'"class="btn">Mindful 101</button>
+</div>
+
+<div class="buttoncontainer floatright">
+  <img src="pfc_images/index/research_pic.jpg">
+  <button onclick="location.href='Research.html'"class="btn">Research</button>
+</div>
+
+<div class="buttoncontainer floatright">
+  <img src="pfc_images/index/miscon_pic.jpg">
+  <button onclick="location.href='Misconceptions.html'" class="btn">Misconceptions</button>
+</div>
+
+<div class="buttoncontainer floatleft">
+  <img src="pfc_images/index/students_pic.jpg">
+  <button onclick="location.href='On_Campus.html'"class="btn">On Campus</button>
+</div>
+
+<div class="buttoncontainer floatright">
+  <img src="pfc_images/index/blog.jpg">
+  <button onclick="location.href='PfC_blog.html'"class="btn">Blog</button>
+</div>
+</div>
+
+
+
+<br>
+<br>
+
+
+</body>
+</html>
