--- a/Contact.Rmd
+++ b/Contact.Rmd
@@ -20,6 +20,7 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+<title>Contact | Planning for Calm</title>
 <style>
   
   body {
