--- a/Destress.Rmd
+++ b/Destress.Rmd
@@ -23,7 +23,7 @@
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
 
-<title>De-Stress</title>
+<title>De-Stress | Planning for Calm</title>
   <style>
   
   body {
