--- a/Glossary.Rmd
+++ b/Glossary.Rmd
@@ -20,6 +20,7 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+<title>Glossary | Planning for Calm</title>
 
 <style>
   
