--- a/Mindful_101.Rmd
+++ b/Mindful_101.Rmd
@@ -20,6 +20,7 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+<title>Mindful 101 | Planning for Calm</title>
   <style>
   
   body {
