--- a/Moments.Rmd
+++ b/Moments.Rmd
@@ -20,6 +20,7 @@
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
+<title>Mindful Moments | Planning for Calm</title>
   <style>
   
   body {
