--- a/index.Rmd
+++ b/index.Rmd
@@ -23,7 +23,7 @@
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
 
-<title>Home</title>
+<title>Home | Planning for Calm</title>
 
 <style>
 
